crates/test-generator/tests/snapshots/ts/test_generated_if_statement.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
if (condition) { const result = 42; }

AST:
(program
  (if_statement
    condition: (parenthesized_expression
      (identifier "condition")
    )
    consequence: (statement_block
      (lexical_declaration
        (variable_declarator
          name: (identifier "result")
          value: (number "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:24 to 1:30 }, name: "result", definition_type: VariableDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:5 to 1:14 }, name: "condition", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
