crates/test-generator/tests/snapshots/ts/test_generated_labeled_statement.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
label: for (let i = 0; i < 10; i++) { break label; }

AST:
(program
  (labeled_statement
    label: (statement_identifier)
    body: (for_statement
      initializer: (lexical_declaration
        (variable_declarator
          name: (identifier "i")
          value: (number "0")
        )
      )
      condition: (binary_expression
        left: (identifier "i")
        right: (number "10")
      )
      increment: (update_expression
        argument: (identifier "i")
      )
      body: (statement_block
        (break_statement
          label: (statement_identifier)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:17 to 1:18 }, name: "i", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:24 to 1:25 }, name: "i", kind: Identifier, context: None },
        Usage { position: { 1:32 to 1:33 }, name: "i", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
