crates/test-generator/tests/snapshots/ts/test_generated_member_expression.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
obj1.prop1

AST:
(program
  (expression_statement
    (member_expression
      object: (identifier "obj1")
      property: (property_identifier "prop1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "obj1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 5,
            },
            context: None,
        },
        Usage {
            name: "prop1",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 11,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
