crates/test-generator/tests/snapshots/ts/test_generated_new_expression.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
new TestClass2(arg)

AST:
(program
  (expression_statement
    (new_expression
      constructor: (identifier "TestClass2")
      arguments: (arguments
        (identifier "arg")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:5 to 1:15 }, name: "TestClass2", kind: Identifier, context: None },
        Usage { position: { 1:16 to 1:19 }, name: "arg", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
